added Roiter Noeh

--- a/ppl/2/3/ea6bb044a6a461e3ea27bc23f32.html
+++ b/ppl/2/3/ea6bb044a6a461e3ea27bc23f32.html
@@ -128,6 +128,9 @@
 			</table>
 		</div>
 		<div class="subsection" id="parents">
+			<h4>Relation to the center person (Лейбман, Леонид Александрович) : grandmother</h4>
+		</div>
+		<div class="subsection" id="parents">
 			<h4>Parents</h4>
 			<table class="infolist">
 				<thead>
