--- a/ppl/4/1/ea6bb044e324fade7898b8a9c14.html
+++ b/ppl/4/1/ea6bb044e324fade7898b8a9c14.html
@@ -62,13 +62,13 @@
 				<tr class="BeginFamily">
 					<td class="ColumnType">&nbsp</td>
 					<td class="ColumnAttribute">&nbsp</td>
-					<td class="ColumnValue"><a href="" title="Family of Клейман, Пётр Ефимович and Ройтер, Белла">Family of Клейман, Пётр Ефимович and Ройтер, Белла<span class="grampsid"> [F0031]</span></a></td>
+					<td class="ColumnValue"><a href="" title="Family of Клейман, Пётр Ефимович and Ройтер, Белла Нойховна">Family of Клейман, Пётр Ефимович and Ройтер, Белла Нойховна<span class="grampsid"> [F0031]</span></a></td>
 				</tr>
 				<tr class="BeginFamily">
-					<td class="ColumnType">Unknown</td>
-					<td class="ColumnAttribute">Partner</td>
+					<td class="ColumnType">Married</td>
+					<td class="ColumnAttribute">Wife</td>
 					<td class="ColumnValue">
-						<a href="../../../ppl/b/2/ea6bb044e3b1e636d7fb1cfaf2b.html">Ройтер, Белла<span class="grampsid"> [I0088]</span></a>
+						<a href="../../../ppl/b/2/ea6bb044e3b1e636d7fb1cfaf2b.html">Ройтер, Белла Нойховна<span class="grampsid"> [I0088]</span></a>
 					 ( * 
 					
 					 + 
@@ -104,7 +104,7 @@
 						Клейман, Пётр Ефимович
 							<ol class="spouselist">
 								<li class="spouse">
-									<a href="../../../ppl/b/2/ea6bb044e3b1e636d7fb1cfaf2b.html">Ройтер, Белла<span class="grampsid"> [I0088]</span></a>
+									<a href="../../../ppl/b/2/ea6bb044e3b1e636d7fb1cfaf2b.html">Ройтер, Белла Нойховна<span class="grampsid"> [I0088]</span></a>
 									<ol>
 										<li>
 											<a href="../../../ppl/2/7/ea6bb044e0a7166fd9a8f1d5872.html">Клейман, Наум Петрович<span class="grampsid"> [I0085]</span></a>
