--- a/ppl/c/8/ea6bb0449b6252938ae28a2558c.html
+++ b/ppl/c/8/ea6bb0449b6252938ae28a2558c.html
@@ -130,7 +130,7 @@
 			</table>
 		</div>
 		<div class="subsection" id="parents">
-			<h4>Relation to the center person (Свистов, Дмитрий Леонидович) : first cousin twice removed (up)</h4>
+			<h4>Relation to the center person (Лейбман, Леонид Александрович) : father</h4>
 		</div>
 		<div class="subsection" id="parents">
 			<h4>Parents</h4>
