--- a/ppl/d/f/ea6bc3940f752c76d53dcd04efd.html
+++ b/ppl/d/f/ea6bc3940f752c76d53dcd04efd.html
@@ -94,7 +94,7 @@
 			</table>
 		</div>
 		<div class="subsection" id="parents">
-			<h4>Relation to the center person (Свистов, Дмитрий Леонидович) : uncle</h4>
+			<h4>Relation to the center person (Лейбман, Леонид Александрович) : second cousin</h4>
 		</div>
 		<div class="subsection" id="parents">
 			<h4>Parents</h4>
