--- a/ppl/2/1/ea6bc9a6ff142df2835bd135112.html
+++ b/ppl/2/1/ea6bc9a6ff142df2835bd135112.html
@@ -51,7 +51,7 @@
 			</table>
 		</div>
 		<div class="subsection" id="parents">
-			<h4>Relation to the center person (Свистов, Дмитрий Леонидович) : first cousin</h4>
+			<h4>Relation to the center person (Лейбман, Леонид Александрович) : second cousin once removed (down)</h4>
 		</div>
 		<div class="subsection" id="parents">
 			<h4>Parents</h4>
