--- a/ppl/2/d/ea6bb044ab715d2cb58f403eed2.html
+++ b/ppl/2/d/ea6bb044ab715d2cb58f403eed2.html
@@ -58,7 +58,7 @@
 			</table>
 		</div>
 		<div class="subsection" id="parents">
-			<h4>Relation to the center person (Свистов, Дмитрий Леонидович) : second great grandfather</h4>
+			<h4>Relation to the center person (Лейбман, Леонид Александрович) : great grandfather</h4>
 		</div>
 		<div class="subsection" id="families">
 			<h4>Families</h4>
