--- a/ppl/3/4/ea6bb044a4632ccad7e76899943.html
+++ b/ppl/3/4/ea6bb044a4632ccad7e76899943.html
@@ -122,7 +122,7 @@
 			</table>
 		</div>
 		<div class="subsection" id="parents">
-			<h4>Relation to the center person (Свистов, Дмитрий Леонидович) : great granduncle</h4>
+			<h4>Relation to the center person (Лейбман, Леонид Александрович) : grandfather</h4>
 		</div>
 		<div class="subsection" id="parents">
 			<h4>Parents</h4>
