--- a/ppl/5/1/ea6bb044cf148cee1a8a3f9215.html
+++ b/ppl/5/1/ea6bb044cf148cee1a8a3f9215.html
@@ -55,6 +55,9 @@
 			</table>
 		</div>
 		<div class="subsection" id="parents">
+			<h4>Relation to the center person (Лейбман, Леонид Александрович) : second cousin</h4>
+		</div>
+		<div class="subsection" id="parents">
 			<h4>Parents</h4>
 			<table class="infolist">
 				<thead>
