--- a/ppl/5/e/ea6bb044dcd3edaaa5b00e8f0e5.html
+++ b/ppl/5/e/ea6bb044dcd3edaaa5b00e8f0e5.html
@@ -51,7 +51,7 @@
 			</table>
 		</div>
 		<div class="subsection" id="parents">
-			<h4>Relation to the center person (Свистов, Дмитрий Леонидович) : third cousin</h4>
+			<h4>Relation to the center person (Лейбман, Леонид Александрович) : second cousin once removed (down)</h4>
 		</div>
 		<div class="subsection" id="parents">
 			<h4>Parents</h4>
