--- a/ppl/6/6/ea6bb044a0a2772dd9d84965966.html
+++ b/ppl/6/6/ea6bb044a0a2772dd9d84965966.html
@@ -97,7 +97,7 @@
 			</table>
 		</div>
 		<div class="subsection" id="parents">
-			<h4>Relation to the center person (Свистов, Дмитрий Леонидович) : second cousin once removed (up)</h4>
+			<h4>Relation to the center person (Лейбман, Леонид Александрович) : brother</h4>
 		</div>
 		<div class="subsection" id="parents">
 			<h4>Parents</h4>
