--- a/ppl/8/5/ea6bb044e43704c2bd400993958.html
+++ b/ppl/8/5/ea6bb044e43704c2bd400993958.html
@@ -87,7 +87,7 @@
 			</table>
 		</div>
 		<div class="subsection" id="parents">
-			<h4>Relation to the center person (Свистов, Дмитрий Леонидович) : third cousin</h4>
+			<h4>Relation to the center person (Лейбман, Леонид Александрович) : first cousin once removed (down)</h4>
 		</div>
 		<div class="subsection" id="parents">
 			<h4>Parents</h4>
@@ -192,7 +192,7 @@
 				<div class="gvline" style="top: 137px; left: 375px; height: 131px;"></div>
 				<div class="boxbg female AncCol2" style="top: 334px; left: 386px;">
 					<a class="noThumb" href="../../../ppl/b/2/ea6bb044e3b1e636d7fb1cfaf2b.html">
-					Ройтер, Белла<br/>*
+					Ройтер, Белла Нойховна<br/>*
 					
 					<br/>+
 					...
@@ -203,6 +203,21 @@
 				<div class="gvline" style="top: 399px; left: 375px; width: 20px;"></div>
 				<div class="bhline" style="top: 263px; left: 370px; height: 131px;"></div>
 				<div class="gvline" style="top: 268px; left: 375px; height: 131px;"></div>
+				<div class="bvline" style="top: 394px; left: 545px; width: 15px"></div>
+				<div class="gvline" style="top: 399px; left: 545px; width: 20px"></div>
+				<div class="boxbg male AncCol3" style="top: 269px; left: 576px;">
+					<a class="noThumb" href="../../../ppl/8/3/eb157aad4151033b13d88c50838.html">
+					Ройтер, Ноех<br/>*
+					
+					<br/>+
+					...
+					</a>
+				</div>
+				<div class="shadow" style="top: 274px; left: 580px;"></div>
+				<div class="bvline" style="top: 329px; left: 560px; width: 15px;"></div>
+				<div class="gvline" style="top: 334px; left: 565px; width: 20px;"></div>
+				<div class="bhline" style="top: 329px; left: 560px; height: 65px;"></div>
+				<div class="gvline" style="top: 334px; left: 565px; height: 65px;"></div>
 				<div class="boxbg female AncCol1" style="top: 727px; left: 196px;">
 					<a class="noThumb" href="../../../ppl/9/7/ea6bb044b23319f569ceca41e79.html">
 					Лейбман, Юлия Альфредовна<br/>*
