--- a/ppl/9/c/ea6bb044b9f755234c4db4d8dc9.html
+++ b/ppl/9/c/ea6bb044b9f755234c4db4d8dc9.html
@@ -61,7 +61,7 @@
 			</table>
 		</div>
 		<div class="subsection" id="parents">
-			<h4>Relation to the center person (Свистов, Дмитрий Леонидович) : first cousin twice removed (up)</h4>
+			<h4>Relation to the center person (Лейбман, Леонид Александрович) : first cousin once removed (up)</h4>
 		</div>
 		<div class="subsection" id="parents">
 			<h4>Parents</h4>
