--- a/ppl/b/3/ea6bb044b5156f707176386693b.html
+++ b/ppl/b/3/ea6bb044b5156f707176386693b.html
@@ -58,7 +58,7 @@
 			</table>
 		</div>
 		<div class="subsection" id="parents">
-			<h4>Relation to the center person (Свистов, Дмитрий Леонидович) : great grandmother</h4>
+			<h4>Relation to the center person (Лейбман, Леонид Александрович) : grandaunt</h4>
 		</div>
 		<div class="subsection" id="parents">
 			<h4>Parents</h4>
