--- a/ppl/c/3/ea6bb044dab71d15c63fd74363c.html
+++ b/ppl/c/3/ea6bb044dab71d15c63fd74363c.html
@@ -55,7 +55,7 @@
 			</table>
 		</div>
 		<div class="subsection" id="parents">
-			<h4>Relation to the center person (Свистов, Дмитрий Леонидович) : second cousin once removed (up)</h4>
+			<h4>Relation to the center person (Лейбман, Леонид Александрович) : second cousin</h4>
 		</div>
 		<div class="subsection" id="parents">
 			<h4>Parents</h4>
