--- a/ppl/d/2/ea6bb0449841fb80dd5105c762d.html
+++ b/ppl/d/2/ea6bb0449841fb80dd5105c762d.html
@@ -91,7 +91,7 @@
 			</table>
 		</div>
 		<div class="subsection" id="parents">
-			<h4>Relation to the center person (Свистов, Дмитрий Леонидович) : third cousin</h4>
+			<h4>Relation to the center person (Лейбман, Леонид Александрович) : daughter</h4>
 		</div>
 		<div class="subsection" id="parents">
 			<h4>Parents</h4>
