--- a/ppl/d/c/ea6bca08ae915f917d88321bfcd.html
+++ b/ppl/d/c/ea6bca08ae915f917d88321bfcd.html
@@ -51,7 +51,7 @@
 			</table>
 		</div>
 		<div class="subsection" id="parents">
-			<h4>Relation to the center person (Свистов, Дмитрий Леонидович) : first cousin</h4>
+			<h4>Relation to the center person (Лейбман, Леонид Александрович) : second cousin once removed (down)</h4>
 		</div>
 		<div class="subsection" id="parents">
 			<h4>Parents</h4>
