--- a/ppl/e/b/ea6bb044d9d5221a20bf0e1b3be.html
+++ b/ppl/e/b/ea6bb044d9d5221a20bf0e1b3be.html
@@ -55,7 +55,7 @@
 			</table>
 		</div>
 		<div class="subsection" id="parents">
-			<h4>Relation to the center person (Свистов, Дмитрий Леонидович) : second cousin once removed (up)</h4>
+			<h4>Relation to the center person (Лейбман, Леонид Александрович) : second cousin</h4>
 		</div>
 		<div class="subsection" id="parents">
 			<h4>Parents</h4>
