--- a/ppl/f/7/ea6bb044e6c4e3390f7c2e47a7f.html
+++ b/ppl/f/7/ea6bb044e6c4e3390f7c2e47a7f.html
@@ -87,7 +87,7 @@
 			</table>
 		</div>
 		<div class="subsection" id="parents">
-			<h4>Relation to the center person (Свистов, Дмитрий Леонидович) : third cousin once removed (down)</h4>
+			<h4>Relation to the center person (Лейбман, Леонид Александрович) : first cousin twice removed (down)</h4>
 		</div>
 		<div class="subsection" id="parents">
 			<h4>Parents</h4>
@@ -220,7 +220,7 @@
 				<div class="gvline" style="top: 596px; left: 565px; height: 65px;"></div>
 				<div class="boxbg female AncCol3" style="top: 661px; left: 576px;">
 					<a class="noThumb" href="../../../ppl/b/2/ea6bb044e3b1e636d7fb1cfaf2b.html">
-					Ройтер, Белла<br/>*
+					Ройтер, Белла Нойховна<br/>*
 					
 					<br/>+
 					...
